--- a/index.html
+++ b/index.html
@@ -14,31 +14,79 @@
     <h1>Великое начинается с вдохновления</h1>
 
     <section class="products">
-      <div class="product" data-id="poster1" data-name="Постер 1" data-price="1500">
-        <img src="images/poster1.jpg" alt="Постер 1" />
-        <div class="product-info">
-          <h2>Постер 1</h2>
-          <p>1500 ₽</p>
-          <button class="add-to-cart">Добавить в корзину</button>
-        </div>
+      <div class="product" data-id="poster1" data-price="1500">
+        <img src="images/poster1.jpg" alt="Red Ferrari" />
+        <div class="product-info"><h2>Red Ferrari</h2><p>1500 ₽</p><button class="add-to-cart">Добавить в корзину</button></div>
       </div>
 
-      <div class="product" data-id="poster2" data-name="Постер 2" data-price="1700">
-        <img src="images/poster2.jpg" alt="Постер 2" />
-        <div class="product-info">
-          <h2>Постер 2</h2>
-          <p>1700 ₽</p>
-          <button class="add-to-cart">Добавить в корзину</button>
-        </div>
+      <div class="product" data-id="poster2" data-price="1700">
+        <img src="images/poster2.jpg" alt="Football is live" />
+        <div class="product-info"><h2>Football is live</h2><p>1700 ₽</p><button class="add-to-cart">Добавить в корзину</button></div>
       </div>
 
-      <div class="product" data-id="poster3" data-name="Постер 3" data-price="1300">
-        <img src="images/poster3.jpg" alt="Постер 3" />
-        <div class="product-info">
-          <h2>Постер 3</h2>
-          <p>1300 ₽</p>
-          <button class="add-to-cart">Добавить в корзину</button>
-        </div>
+      <div class="product" data-id="poster3" data-price="1200">
+        <img src="images/poster3.jpg" alt="very rich vibe" />
+        <div class="product-info"><h2>very rich vibe</h2><p>1200 ₽</p><button class="add-to-cart">Добавить в корзину</button></div>
+      </div>
+
+      <div class="product" data-id="poster4" data-price="1400">
+        <img src="images/poster4.jpg" alt="Rolls Royce" />
+        <div class="product-info"><h2>Rolls Royce</h2><p>1400 ₽</p><button class="add-to-cart">Добавить в корзину</button></div>
+      </div>
+
+      <div class="product" data-id="poster5" data-price="1600">
+        <img src="images/poster5.jpg" alt="Ferrari aestetic" />
+        <div class="product-info"><h2>Ferrari aestetic</h2><p>1600 ₽</p><button class="add-to-cart">Добавить в корзину</button></div>
+      </div>
+
+      <div class="product" data-id="poster6" data-price="1300">
+        <img src="images/poster6.jpg" alt="Villa on sea" />
+        <div class="product-info"><h2>Villa on sea</h2><p>1300 ₽</p><button class="add-to-cart">Добавить в корзину</button></div>
+      </div>
+
+      <div class="product" data-id="poster7" data-price="1800">
+        <img src="images/poster7.jpg" alt="Get rich or die tryin'" />
+        <div class="product-info"><h2>Get rich or die tryin'</h2><p>1800 ₽</p><button class="add-to-cart">Добавить в корзину</button></div>
+      </div>
+
+      <div class="product" data-id="poster8" data-price="1200">
+        <img src="images/poster8.jpg" alt="You vs You" />
+        <div class="product-info"><h2>You vs You</h2><p>1200 ₽</p><button class="add-to-cart">Добавить в корзину</button></div>
+      </div>
+
+      <div class="product" data-id="poster9" data-price="1500">
+        <img src="images/poster9.jpg" alt="1%" />
+        <div class="product-info"><h2>1%</h2><p>1500 ₽</p><button class="add-to-cart">Добавить в корзину</button></div>
+      </div>
+
+      <div class="product" data-id="poster10" data-price="1700">
+        <img src="images/poster10.jpg" alt="Do it" />
+        <div class="product-info"><h2>Do it</h2><p>1700 ₽</p><button class="add-to-cart">Добавить в корзину</button></div>
+      </div>
+
+      <div class="product" data-id="poster11" data-price="1300">
+        <img src="images/poster11.jpg" alt="Sucsess routine" />
+        <div class="product-info"><h2>Sucsess routine</h2><p>1300 ₽</p><button class="add-to-cart">Добавить в корзину</button></div>
+      </div>
+
+      <div class="product" data-id="poster12" data-price="1400">
+        <img src="images/poster12.jpg" alt="That girl" />
+        <div class="product-info"><h2>That girl</h2><p>1400 ₽</p><button class="add-to-cart">Добавить в корзину</button></div>
+      </div>
+
+      <div class="product" data-id="poster13" data-price="1800">
+        <img src="images/poster13.jpg" alt="girlboss lifestyle" />
+        <div class="product-info"><h2>girlboss lifestyle</h2><p>1800 ₽</p><button class="add-to-cart">Добавить в корзину</button></div>
+      </div>
+
+      <div class="product" data-id="poster14" data-price="1500">
+        <img src="images/poster14.jpg" alt="I am that girl" />
+        <div class="product-info"><h2>I am that girl</h2><p>1500 ₽</p><button class="add-to-cart">Добавить в корзину</button></div>
+      </div>
+
+      <div class="product" data-id="poster15" data-price="1600">
+        <img src="images/poster15.jpg" alt="Focus" />
+        <div class="product-info"><h2>Focus</h2><p>1600 ₽</p><button class="add-to-cart">Добавить в корзину</button></div>
       </div>
     </section>
 
@@ -61,10 +109,7 @@
     </section>
 
     <section id="payment-info" class="hidden">
-      <h2>Оплата</h2>
-      <p>Пожалуйста, переведите сумму на карту:</p>
-      <p><strong>Номер карты:</strong> 1234 5678 9012 3456</p>
-      <p>После оплаты отправьте подтверждение на почту: support@cyberposters.ru</p>
+      <h2>Мы сообщим Вам о начале продаж</h2>
     </section>
   </main>
 
